--- a/ex3/src/main/resources/templates/index.html
+++ b/ex3/src/main/resources/templates/index.html
@@ -13,5 +13,6 @@
 <a href ="./sample/ex1">./sample/ex1</a><br>
 <!-- Context-relative URL: thymeleaf를 사용,변경에 영향 없음 -->
 <a th:href ="@{/sample/ex1}">/sample/ex1</a><br>
+<a th:href ="@{/sample/selection}">/sample/selection</a>
 </body>
 </html>
