--- a/ex3/src/main/resources/templates/sample/ex2.html
+++ b/ex3/src/main/resources/templates/sample/ex2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Title</title>
   <style>
-    .target {background-color:red;}
+    .target {background-color: red;}
   </style>
 </head>
 <body>
@@ -14,16 +14,27 @@
     &lt;!&ndash;반복문에는 부가적으로 사용할 수 있는 state라는 객체가 있다.&ndash;&gt;
     [[${state.index}  + 1]] : [[${dto}]]
   </li> */-->
-  <!--/*<li th:each="dto, state : ${list}">
+  <!--/* <li th:each="dto, state : ${list}">
     <span th:if="${dto.sno%5 == 0}" th:text="${state.index}+':'+${dto}"></span>
     <span th:unless="${dto.sno%5 == 0}" th:text="${'========================'}"></span>
-  </li>*/-->
-
+  </li> */-->
   <!--/*
-  <li th:each="dto, state : ${list}" th:text="${dto.sno%5 == 0} ? ${dto.sno}"></li>
-  <li th:each="dto, state : ${list}" th:text="${dto.sno%5 == 0} ? ${dto.sno} : ${dto.first}"></li>
+  <li th:each="dto,state:${list}" th:text="${dto.sno%5 == 0}?${dto.sno}"></li>
+  <li th:each="dto,state:${list}" th:text="${dto.sno%5 == 0}?${dto.sno}:${dto.first}"></li>
+  <li th:each="dto,state:${list}" th:class="${dto.sno%5 == 0}?'target'" th:text="${dto}"></li>
   */-->
-  <li th:each="dto, state : ${list}" th:class="${dto.sno%5 == 0} ? 'target'" th:text="${dto}"></li>
+  <!--/*
+  <p> th:block은 별도의 태그가 필요하지 않을 때 사용. [[${}]]와 결과가 같음.</p>
+  <th:block th:each="dto,state:${list}">
+    <li th:text="${dto.sno%5 == 0}?${dto.sno}:${dto.first}"></li>
+  </th:block>
+  */-->
+  <p>쿼리 주소, path 주소</p>
+  <li th:each="dto : ${list}">
+    <a th:href="@{/sample/exView(sno=${dto.sno},first=${dto.first})}" th:text="${dto.first}"></a>
+    <a th:href="@{/sample/exView/{sno}(sno=${dto.sno})}" th:text="${dto.first}"></a>
+  </li>
 </ul>
+
 </body>
 </html>
