--- a/ex3/src/main/resources/templates/index.html
+++ b/ex3/src/main/resources/templates/index.html
@@ -1,3 +1,4 @@
+<!--src/main/resources/templates/bindex.html-->
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -17,6 +18,10 @@
 <a th:href="@{/sample/exInline}">/sample/exInline</a><br>
 <a th:href="@{/sample/ex3}">/sample/ex3</a><br>
 
+<a th:href="@{/sample/exLayout1}">/exLayout1</a><br>
+<a th:href="@{/sample/exLayout2}">/exLayout2</a><br>
 
+<a th:href="@{/sample/exTemplate}">/exTemplate</a><br>
+<a th:href="@{/sample/exSidebar}">/exSidebar</a><br>
 </body>
 </html>
