--- a/ex4/src/main/resources/templates/layout/basic.html
+++ b/ex4/src/main/resources/templates/layout/basic.html
@@ -1,3 +1,4 @@
+<!--src/main/resources/templates/layout/basic.html-->
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <th:block th:fragment="setContent(content)">
