--- a/ex4/src/main/resources/templates/guestbook/list.html
+++ b/ex4/src/main/resources/templates/guestbook/list.html
@@ -1,3 +1,4 @@
+<!--src/main/resources/templates/guestbook/list.html-->
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <th:block th:replace="~{/layout/basic :: setContent(~{this::content})}">
