--- a/ex4/src/main/resources/templates/guestbook/register.html
+++ b/ex4/src/main/resources/templates/guestbook/register.html
@@ -7,6 +7,7 @@
     <style>
       form>div {margin-bottom: 20px;}
     </style>
+    <!--form 태그의 전송 방식은 2개 , get, post 두개 있다 -> -->
     <form th:action="@{/guestbook/register}" th:method="post" id="frmSend">
       <div class="form-group">
         <label for="title">Title</label>
