--- a/ex4/src/main/resources/templates/guestbook/list.html
+++ b/ex4/src/main/resources/templates/guestbook/list.html
@@ -68,7 +68,7 @@
           const myModal = new bootstrap.Modal(document.querySelector('#myModal'),
                           { backdrop: true });
           document.querySelector(".modal-body").innerHTML
-            = `<p>${msg}번 글이 등록되었습니다.</p>`
+            = `<p>${msg}되었습니다.</p>`
           myModal.show()
         }
       }
