--- a/ex4/src/main/resources/templates/guestbook/modify.html
+++ b/ex4/src/main/resources/templates/guestbook/modify.html
@@ -30,25 +30,25 @@
       </div>
       <div class="form-group">
         <label for="regDate">RegDate</label>
-        <input type="text" name="regDate" id="regDate" class="form-control" readonly
+        <input type="text" id="regDate" class="form-control" readonly
                th:value="${#temporals.format(guestbookDTO.regDate, 'yyyy/MM/dd hh:mm')}">
       </div>
       <div class="form-group">
         <label for="modDate">ModDate</label>
-        <input type="text" name="modDate" id="modDate" class="form-control" readonly
+        <input type="text"  id="modDate" class="form-control" readonly
                th:value="${#temporals.format(guestbookDTO.modDate, 'yyyy/MM/dd hh:mm')}">
       </div>
       <div class="form-group">
         <input type="hidden" name="page" th:value="${page}">
         <button class="btn btn-primary btnModi">Modify</button>
         <button class="btn btn-danger btnDele">Delete</button>
-        <button class="btn btn-info btnInfo">Cancel</button>
+        <button class="btn btn-info btnBack">Back</button>
       </div>
     </form>
     <script th:inline="javascript">
       btnModi = document.querySelector(".btnModi")
       btnDele = document.querySelector(".btnDele")
-      btnInfo = document.querySelector(".btnInfo")
+      btnBack = document.querySelector(".btnBack")
       frmSend = document.querySelector("#frmSend")
       btnModi.onclick = e => {
         e.preventDefault() // 유효성검사 넣어줄 것!
@@ -57,7 +57,11 @@
       btnDele.onclick = e => {
         e.preventDefault()
         frmSend.setAttribute('action', /*[[@{/guestbook/remove}]]*/'remove')
-        //frmSend.submit();
+        frmSend.submit();
+      }
+      btnBack.onclick = e => {
+        e.preventDefault()
+        window.history.back();
       }
     </script>
   </th:block>
