--- a/ex4/src/main/resources/templates/guestbook/list.html
+++ b/ex4/src/main/resources/templates/guestbook/list.html
@@ -1,4 +1,3 @@
-<!--src/main/resources/templates/guestbook/list.html-->
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <th:block th:replace="~{/layout/basic :: setContent(~{this::content})}">
@@ -19,7 +18,7 @@
           </select>
         </div>
         <input type="text" class="form-control" name="keyword" style="border-radius:5px"
-               id="keyword" th:value="${pageRequestDTO.keyword?pageRequestDTO.keyword:''}">
+               id="keyword" th:value="${pageRequestDTO.keyword}">
         <div class="input-group-append" style="margin-left:10px;">
           <button class="btn btn-outline-primary btnSearch">Search</button>
         </div>
@@ -107,7 +106,7 @@
           if(!keyword.value) {
             keyword.focus();
             return;
-           }
+          }
           frmSearch.submit();
         }
         type.onchange = () => {
