--- a/ex4/src/main/resources/templates/guestbook/modify.html
+++ b/ex4/src/main/resources/templates/guestbook/modify.html
@@ -1,4 +1,3 @@
-<!--src/main/resources/templates/guestbook/modify.html-->
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <th:block th:replace="~{/layout/basic :: setContent(~{this::content})}">
@@ -35,11 +34,13 @@
       </div>
       <div class="form-group">
         <label for="modDate">ModDate</label>
-        <input type="text"  id="modDate" class="form-control" readonly
+        <input type="text" id="modDate" class="form-control" readonly
                th:value="${#temporals.format(guestbookDTO.modDate, 'yyyy/MM/dd hh:mm')}">
       </div>
       <div class="form-group">
-        <input type="hidden" name="page" th:value="${page}">
+        <input type="hidden" name="page" th:value="${pageRequestDTO.page}">
+        <input type="hidden" name="type" th:value="${pageRequestDTO.type}">
+        <input type="hidden" name="keyword" th:value="${pageRequestDTO.keyword}">
         <button class="btn btn-primary btnModi">Modify</button>
         <button class="btn btn-danger btnDele">Delete</button>
         <button class="btn btn-info btnBack">Back</button>
