--- a/test-server/src/main/resources/templates/products/list.html
+++ b/test-server/src/main/resources/templates/products/list.html
@@ -10,11 +10,9 @@
         <div class="input-group-prepend" style="margin-right:10px;">
           <select class="form-control" id="type" name="type">
             <option th:selected="${pageRequestDTO.type == null}">선택하세요</option>
-            <option value="t" th:selected="${pageRequestDTO.type == 't'}">제목</option>
-            <option value="c" th:selected="${pageRequestDTO.type == 'c'}">내용</option>
-            <option value="w" th:selected="${pageRequestDTO.type == 'w'}">작성자</option>
-            <option value="tc" th:selected="${pageRequestDTO.type == 'tc'}">제목+내용</option>
-            <option value="tcw" th:selected="${pageRequestDTO.type == 'tcw'}">제목+내용+작성자</option>
+            <option value="t" th:selected="${pageRequestDTO.type == 't'}">제품명</option>
+            <option value="c" th:selected="${pageRequestDTO.type == 'c'}">모델명</option>
+            <option value="w" th:selected="${pageRequestDTO.type == 'w'}">제조사</option>
           </select>
         </div>
         <input type="text" class="form-control" name="keyword" style="border-radius:5px"
