--- a/test-server/src/main/resources/templates/products/modify.html
+++ b/test-server/src/main/resources/templates/products/modify.html
@@ -52,16 +52,16 @@
       btnBack = document.querySelector(".btnBack")
       frmSend = document.querySelector("#frmSend")
       btnModi.onclick = e => {
-        e.preventDefault() // 유효성검사 넣어줄 것!
+        e.preventDefault() ;
         frmSend.submit();
       }
       btnDele.onclick = e => {
-        e.preventDefault()
+        e.preventDefault();
         frmSend.setAttribute('action', /*[[@{/products/remove}]]*/'remove')
-        frmSend.submit();
+       frmSend.submit();
       }
       btnBack.onclick = e => {
-        e.preventDefault()
+        e.preventDefault();
         window.history.back();
       }
     </script>
