--- a/test-server/src/main/resources/templates/products/read.html
+++ b/test-server/src/main/resources/templates/products/read.html
@@ -6,7 +6,7 @@
     <style>
       .form-group {margin-bottom: 30px;}
     </style>
-    <form th:action="@{/products/read}" th:method="post" id="frmSend">
+    <form th:action="@{/products/modify}" th:method="post" id="frmSend">
       <div class="form-group">
         <label for="pno">제품번호</label>
         <input type="text" name="pno" id="pno" class="form-control"
@@ -37,13 +37,15 @@
         <input type="text" id="modDate" class="form-control" readonly
                th:value="${#temporals.format(productsDTO.modDate, 'yyyy/MM/dd hh:mm')}">
       </div>
+
       <div class="form-group">
-        <input type="hidden" name="page" th:value="${pageRequestDTO.page}">
-        <input type="hidden" name="type" th:value="${pageRequestDTO.type}">
-        <input type="hidden" name="keyword" th:value="${pageRequestDTO.keyword}">
-        <button class="btn btn-primary btnModi">Modify</button>
-        <button class="btn btn-danger btnDele">Delete</button>
-        <button class="btn btn-info btnBack">Back</button>
+        <a th:href="@{/products/modify(pno=${productsDTO.pno},
+                      page=${pageRequestDTO.page},type=${pageRequestDTO.type},
+                      keyword=${pageRequestDTO.keyword})}"
+           class="btn btn-primary">Modify</a>
+        <a th:href="@{/products/list(page=${pageRequestDTO.page},
+                      type=${pageRequestDTO.type},keyword=${pageRequestDTO.keyword})}"
+           class="btn btn-info">List</a>
       </div>
     </form>
     <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
