--- a/test-server/src/main/resources/templates/products/register.html
+++ b/test-server/src/main/resources/templates/products/register.html
@@ -1,10 +1,52 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
+<th:block th:replace="~{/layout/basic :: setContent(~{this::content})}">
+  <th:block th:fragment="content">
+    <h1 class="mt-4">Products Register Page</h1>
+    <style>
+      .form-group {margin-bottom: 30px;}
+    </style>
+    <form th:action="@{/products/register}" th:method="post" id="frmSend">
+      <div class="form-group">
+        <label for="pname">제품명</label>
+        <input type="text" name="pname" id="pname" class="form-control"
+               placeholder="제품명을 입력하세요">
+      </div>
+      <div class="form-group">
+        <label for="pmodel">모델명</label>
+        <textarea type="text" name="pmodel" id="pmodel" class="form-control"
+                  placeholder="모델명을 입력하세요"></textarea>
+      </div>
+      <div class="form-group">
+        <label for="pmaker">제조자</label>
+        <input type="text" name="pmaker" id="pmaker" class="form-control"
+               placeholder="제조자를 입력하세요" value="user1">
+      </div>
+      <div class="form-group">
+        <label for="price">가격</label>
+        <input type="text" name="price" id="price" class="form-control"
+               placeholder="제조자를 입력하세요" value="0">
+      </div>
+      <div class="form-group">
+        <button type="submit" id="btnSend" class="btn btn-primary">Submit</button>
+      </div>
+    </form>
+    <script th:inline="javascript">
+      btnSend = document.querySelector("#btnSend");
+      btnSend.onclick = function(e) {
+        e.preventDefault();
+        pname = document.getElementById("pname")
+        pmodel = document.querySelector("#pmodel")
+        pmaker = document.querySelector("#pmaker")
+        price = document.querySelector("#price")
+        if(pname.value == "") {pname.focus();return false;}
+        if(pmodel.value == "") {pmodel.focus();return false;}
+        if(pmaker.value == "") {pmaker.focus();return false;}
+        if(price.value == "") {price.focus();return false;}
+        document.querySelector("#frmSend").submit();
+      }
+    </script>
+  </th:block>
 
-</body>
+</th:block>
 </html>
