--- a/ex5/src/main/resources/templates/board/read.html
+++ b/ex5/src/main/resources/templates/board/read.html
@@ -8,7 +8,7 @@
     </style>
     <form th:action="@{/board/modify}" th:method="post" id="frmSend">
       <div class="form-group">
-        <label for="bno">bno</label>
+        <label for="bno">Bno</label>
         <input type="text" name="bno" id="bno" class="form-control"
                th:value="${boardDTO.bno}" readonly>
       </div>
