--- a/ex5/src/main/resources/templates/board/modify.html
+++ b/ex5/src/main/resources/templates/board/modify.html
@@ -23,7 +23,7 @@
                   th:text="${boardDTO.content}"></textarea>
       </div>
       <div class="form-group">
-        <label for="writerEmail">writerEmail</label>
+        <label for="writerEmail">Writer Email</label>
         <input type="text" name="writerEmail" id="writerEmail" class="form-control"
                th:value="${boardDTO.writerEmail}" readonly>
       </div>
