--- a/ex5/src/main/resources/templates/board/read.html
+++ b/ex5/src/main/resources/templates/board/read.html
@@ -70,6 +70,9 @@
         </div>
       </div>
     </div>
+    <style>
+
+    </style>
     <script th:inline="javascript">
       // document의 태그를 모두 읽고 난뒤 실행되는 함수
       window.onload = function(){
@@ -85,13 +88,15 @@
             let str = "";
             for(let i=0;i<data.length;i++) {
               str += `<div class="card-body form-control mb-1" style="padding: 5px 20px"
+              onmouseover="this.style.background='#d6e6ff'"
+              onmouseout="this.style.background='white'"
               data-rno="${data[i].rno}" data-text="${data[i].text}"
               data-replyer="${data[i].replyer}" style="cursor:pointer;">
-              <p><b>${data[i].rno}</b></p>
-              <h5 class="card-text" style="display:inline-block; width:400px;">${data[i].text}</h5>
-              <h6 class="card-subtitle mb-2 text-muted"
-              style ="display: inline-block; width:100px; >${data[i].replyer}</h6>
-              <p class="card-text">${formatDateTime(data[i].regDate)}</p>
+              <h4>${data[i].rno}</h4>
+              <h5 class="card-text" style="display:inline-block;width:300px">${data[i].text}</h5>
+              <h6 class="card-subtitle text-muted"
+                style="display:inline-block;">${data[i].replyer}</h6>
+              <p class="card-text" style="display:inline-block;">${formatDateTime(data[i].regDate)}</p>
               </div>`
             }
             listGroup.innerHTML = str
