--- a/ex5/src/main/resources/templates/board/read.html
+++ b/ex5/src/main/resources/templates/board/read.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <th:block th:replace="~{/layout/basic :: setContent(~{this::content})}">
@@ -109,6 +110,69 @@
               </div>`
             }
             listGroup.innerHTML = str
+            const cardBody = document.querySelectorAll(".card-body")
+            for(let i=0;i<cardBody.length;i++) {
+              cardBody[i].onclick = function() {
+                let rno = cardBody[i].dataset.rno;
+                let text = cardBody[i].dataset.text;
+                let replyer = cardBody[i].dataset.replyer;
+                document.querySelector('#exampleModalLabel').textContent = rno+'번 댓글'
+                document.querySelector(".modal-body").innerHTML =
+                  `<input type="hidden" name="rno" value="${rno}" readonly>
+                   <input type="text" class="form-control" name="text" value="${text}">
+                   <input type="text" class="form-control" name="replyer" value='${replyer}'>
+                  `
+                document.querySelector(".modal-footer").innerHTML =
+                  `<button type="button" class="btn btn-danger remove">댓글 삭제</button>
+                   <button type="button" class="btn btn-warning modify">댓글 수정</button>
+                   <span class="btn btn-secondary" data-bs-dismiss="modal">Close</span>
+                  `
+                document.querySelector(".modal-footer .modify").onclick = function () {
+                  let rno = document.querySelector("input[name='rno']")
+                  let text = document.querySelector("input[name='text']")
+                  let replyer = document.querySelector("input[name='replyer']")
+
+                  if(!text.value) {text.setAttribute('placeholder', '댓글입력하세요');return;}
+                  if(!replyer.value) {replyer.setAttribute('placeholder', '작성자입력하세요');return;}
+                  let reply = {rno: rno.value,bno: bno,text: text.value,replyer: replyer.value}
+                  const url = /*[[@{/replies/}]]*/'url';
+                  fetch(url, {
+                    method: 'PUT',
+                    headers: {'Content-type': 'application/json'},
+                    body: JSON.stringify(reply)
+                  })
+                  .then(res => res.json())
+                  .then(async function(data){
+                    document.querySelector("#exampleModalLabel").innerHTML=`수정 알림`
+                    document.querySelector(".modal-body").innerHTML=`${data}번 댓글 수정 완료.`
+                    document.querySelector(".modal-footer .modify").style.display = 'none'
+                    document.querySelector(".modal-footer .remove").style.display = 'none'
+                    loadReplyJSON()
+                  })
+                  .catch(err => console.log('myError', err))
+                }
+                document.querySelector(".modal-footer .remove").onclick = function () {
+                  let rno = document.querySelector("input[name='rno']")
+                  const url = /*[[@{/replies/}]]*/'url';
+                  fetch(url + rno.value, {
+                    method: 'DELETE',
+                    headers: {'Content-type': 'application/json'},
+                  })
+                  .then(res => res.json())
+                  .then(async function(data){
+                    document.querySelector("#exampleModalLabel").innerHTML=`삭제 알림`
+                    document.querySelector(".modal-body").innerHTML=`${data}번 댓글 삭제 완료.`
+                    document.querySelector(".modal-footer .modify").style.display = 'none'
+                    document.querySelector(".modal-footer .remove").style.display = 'none'
+                    document.querySelector("#repCnt").textContent =
+                      parseInt(document.querySelector("#repCnt").textContent) - 1
+                    loadReplyJSON()
+                  })
+                  .catch(err => console.log('myError', err))
+                }
+                myModal.show()
+              }
+            }
           });
         }
         function formatDateTime(str) {
@@ -124,7 +188,7 @@
           document.querySelector('#exampleModalLabel').textContent = '댓글 추가'
           document.querySelector(".modal-body").innerHTML =
             `
-            <input type="text" class="form-control" name="replyText" placeholder="Reply...">
+            <input type="text" class="form-control" name="text" placeholder="Reply...">
             <input type="text" class="form-control" name="replyer" value='user50@a.a'>
             `
           document.querySelector(".modal-footer").innerHTML =
@@ -133,7 +197,7 @@
               <span class="btn btn-secondary" data-bs-dismiss="modal">Close</span>
             `
           document.querySelector(".modal-footer .save").onclick = function () {
-            let text = document.querySelector("input[name='replyText']")
+            let text = document.querySelector("input[name='text']")
             let replyer = document.querySelector("input[name='replyer']")
 
             if(!text.value) {text.setAttribute('placeholder', '댓글입력하세요');return;}
