--- a/ex6/src/main/resources/templates/movie/register.html
+++ b/ex6/src/main/resources/templates/movie/register.html
@@ -5,6 +5,13 @@
     <h1 class="mt-4">Movie Register Page</h1>
     <style>
       .form-group {margin-bottom: 30px;}
+      .uploadResult {width: 100%;background:gray;margin-top:10px;}
+      .uploadResult ul {
+        display: flex;flex-flow:row;justify-content:center;
+        align-items:center;vertical-align:top;overflow: auto;
+      }
+      .uploadResult ul li {list-style:none;padding:10px;margin-left:2em;}
+      .uploadResult ul li img {width: 100px;}
     </style>
     <form th:action="@{/movie/register}" th:method="post" id="frmSend">
       <div class="form-group">
@@ -111,10 +118,18 @@
       btnSend = document.querySelector("#btnSend");
       btnSend.onclick = function(e) {
         e.preventDefault();
-        title = document.getElementById("title")
-        writerEmail = document.querySelector("#writerEmail")
+        const title = document.getElementById("title")
         if(title.value == "") {title.focus();return false;}
-        if(writerEmail.value == "") {writerEmail.focus();return false;}
+        let str = "";
+        const liArr = document.querySelectorAll(".uploadResult ul li");
+        for(let i=0;i<liArr.length;i++){
+          str += `
+            <input type="hidden" name="imageDTOList[${i}].imgName" value="${liArr[i].dataset.name}">
+            <input type="hidden" name="imageDTOList[${i}].path" value="${liArr[i].dataset.path}">
+            <input type="hidden" name="imageDTOList[${i}].uuid" value="${liArr[i].dataset.uuid}">
+          `
+        }
+        document.querySelector(".box").innerHTML = str;
         document.querySelector("#frmSend").submit();
       }
 
