--- a/ex6/src/main/resources/templates/movie/modify.html
+++ b/ex6/src/main/resources/templates/movie/modify.html
@@ -2,40 +2,40 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <th:block th:replace="~{/layout/basic :: setContent(~{this::content})}">
   <th:block th:fragment="content">
-    <h1 class="mt-4">Board Modify Page</h1>
+    <h1 class="mt-4">Movie Modify Page</h1>
     <style>
       .form-group {margin-bottom: 30px;}
     </style>
-    <form th:action="@{/board/modify}" th:method="post" id="frmSend">
+    <form th:action="@{/movie/modify}" th:method="post" id="frmSend">
       <div class="form-group">
         <label for="bno">Bno</label>
         <input type="text" name="bno" id="bno" class="form-control"
-               th:value="${boardDTO.bno}" readonly>
+               th:value="${movieDTO.bno}" readonly>
       </div>
       <div class="form-group">
         <label for="title">Title</label>
         <input type="text" name="title" id="title" class="form-control"
-               th:value="${boardDTO.title}">
+               th:value="${movieDTO.title}">
       </div>
       <div class="form-group">
         <label for="content">Content</label>
         <textarea type="text" name="content" id="content" class="form-control"
-                  th:text="${boardDTO.content}"></textarea>
+                  th:text="${movieDTO.content}"></textarea>
       </div>
       <div class="form-group">
         <label for="writerEmail">Writer Email</label>
         <input type="text" name="writerEmail" id="writerEmail" class="form-control"
-               th:value="${boardDTO.writerEmail}" readonly>
+               th:value="${movieDTO.writerEmail}" readonly>
       </div>
       <div class="form-group">
         <label for="regDate">RegDate</label>
         <input type="text" id="regDate" class="form-control" readonly
-               th:value="${#temporals.format(boardDTO.regDate, 'yyyy/MM/dd hh:mm')}">
+               th:value="${#temporals.format(movieDTO.regDate, 'yyyy/MM/dd hh:mm')}">
       </div>
       <div class="form-group">
         <label for="modDate">ModDate</label>
         <input type="text" id="modDate" class="form-control" readonly
-               th:value="${#temporals.format(boardDTO.modDate, 'yyyy/MM/dd hh:mm')}">
+               th:value="${#temporals.format(movieDTO.modDate, 'yyyy/MM/dd hh:mm')}">
       </div>
       <div class="form-group">
         <input type="hidden" name="page" th:value="${pageRequestDTO.page}">
@@ -57,7 +57,7 @@
       }
       btnDele.onclick = e => {
         e.preventDefault()
-        frmSend.setAttribute('action', /*[[@{/board/remove}]]*/'remove')
+        frmSend.setAttribute('action', /*[[@{/movie/remove}]]*/'remove')
         frmSend.submit();
       }
       btnBack.onclick = e => {
